@@ -14,6 +14,26 @@
 <ulink url="&downloadable-file;images/nslug2/netboot/di-nslu2.bin">.../images/nslug2/netboot/di-nslu2.bin</ulink>
   '>
 
+  <!ENTITY n2100-firmware-img '
+<ulink url="&downloadable-file;images/iop32x/netboot/n2100.bin">.../images/iop32x/netboot/n2100.bin</ulink>
+  '>
+
+  <!ENTITY glantank-firmware-img '
+<ulink url="&downloadable-file;images/iop32x/netboot/">.../images/iop32x/netboot/</ulink>
+  '>
+
+  <!ENTITY kuroboxpro-firmware-img '
+<ulink url="&downloadable-file;images/orion5x/netboot/buffalo/kuroboxpro">.../images/orion5x/netboot/buffalo/kuroboxpro</ulink>
+  '>
+
+  <!ENTITY mv2120-firmware-img '
+<ulink url="&downloadable-file;images/orion5x/netboot/hp/mv2120/netboot.img">.../images/orion5x/netboot/hp/mv2120/netboot.img</ulink>
+  '>
+
+  <!ENTITY qnap-firmware-img '
+<ulink url="&downloadable-file;images/orion5x/netboot/qnap/">.../images/orion5x/netboot/qnap/</ulink>
+  '>
+
 <!-- m68k updated 2004-11-04 -->
 
   <!ENTITY bvme6000-tftp-files '
