@@ -27,8 +27,68 @@ initrd can be obtained from &cats-boot-img;.
 <para>
 
 A firmware image is provided for the Linksys NSLU2 which will automatically
-boot <classname>debian-installer</classname>.  This firmware image can be
+boot <classname>debian-installer</classname>.  This image can be uploaded
+via the Linksys web frontend or with upslug2.  This firmware image can be
 obtained from &nslu2-firmware-img;.
+
+</para>
+   </sect3>
+
+
+   <sect3 arch="arm" id="n2100-install-files">
+   <title>Thecus N2100 Installation Files</title>
+<para>
+
+A firmware image is provided for the Thecus N2100 which will automatically
+boot <classname>debian-installer</classname>.  This image can be installed
+using the Thecus firmware upgrade process. This firmware image can be
+obtained from &n2100-firmware-img;.
+
+</para>
+   </sect3>
+
+   <sect3 arch="arm" id="glantank-install-files">
+   <title>GLAN Tank Installation Files</title>
+<para>
+
+The GLAN Tank requires a kernel and ramdisk on an ext2 partition on the
+disk on with you intend to install Debian.  These images can be obtained
+from &glantank-firmware-img;.
+
+</para>
+   </sect3>
+
+   <sect3 arch="arm" id="kuroboxpro-install-files">
+   <title>Kurobox Pro Installation Files</title>
+<para>
+
+The Kurobox Pro requires a kernel and ramdisk on an ext2 partition on the
+disk on with you intend to install Debian.  These images can be obtained
+from &kuroboxpro-firmware-img;.
+
+</para>
+   </sect3>
+
+   <sect3 arch="arm" id="mv2120-install-files">
+   <title>HP mv2120 Installation Files</title>
+<para>
+
+A firmware image is provided for the HP mv2120 which will automatically
+boot <classname>debian-installer</classname>.  This image can be installed
+with uphpmvault on Linux and other systems and with the HP Media
+Vault Firmware Recovery Utility on Windows.  The firmware image can be
+obtained from &mv2120-firmware-img;.
+
+</para>
+   </sect3>
+
+   <sect3 arch="arm" id="qnap-install-files">
+   <title>QNAP Turbo Station Installation Files</title>
+<para>
+
+The QNAP Turbo Station (TS-109, TS-209 and TS-409) requires a kernel and
+ramdisk which can be obtained from &qnap-firmware-img;.  A script is
+provided to write these images to flash.
 
 </para>
    </sect3>
