@@ -3,6 +3,7 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   [ Martin Michlmayr ]
   * Remove everything about DECstation since these machines are
     no longer supported.
+  * Provide information about all iop32x and orion5x installation media.
 
   [ Frans Pop ]
   * Update copyright to 2008.
